<b><u> v2.09, 08.08.2016</b></u>
<font color=#FF8C00>&#9830;</font> Change the default position of the Changelog.
<font color=#FF8C00>&#9830;</font> Fix lua error in install.

<b><u> v2.08, 07.08.2016</b></u>
<font color=#FF8C00>&#9830;</font> Add tabs for professions on the TradeSkill Frame.
<font color=#FF8C00>&#9830;</font> Add a few CVars to the chat install.
<font color=#FF8C00>&#9830;</font> Return of the skin for Scenario/Proving Ground.
<font color=#FF8C00>&#9830;</font> Add new SLE settings for Guild/Friends DT's.

<b><u> v2.07, 02.08.2016</b></u>
<font color=#FF8C00>&#9830;</font> Install: Add a new Heal Layout to the install process (WIP). Inspired by insertuseralias.
<font color=#FF8C00>&#9830;</font> Install: Adjust the ActionBar Layout for DPS-Layout.
<font color=#FF8C00>&#9830;</font> Install: Adjust new SLE settings. (Required SLE v.3.09)
<font color=#FF8C00>&#9830;</font> QuestTracker: Color the Quest by difficulty.
<font color=#FF8C00>&#9830;</font> QuestTracker: Style the progress bar for Bonus Objectives.
<font color=#FF8C00>&#9830;</font> Added more Roboto fonts. Use Merathilis-Roboto-Medium for chat.
<font color=#FF8C00>&#9830;</font> LocPanel: Added option for Auto Width. Change width based on the zone name length.

<b><u> v2.06, 30.07.2016</b></u>
<font color=#FF8C00>&#9830;</font> Add a LocationPanel. All credits belong to Darth Predator (Shadow&Light).
<font color=#FF8C00>&#9830;</font> Add a Achievement status in tooltip. Based on Enhanced Achievements.
<font color=#FF8C00>&#9830;</font> Code cleanup.
<font color=#FF8C00>&#9830;</font> Changed specswitch datatext to change spec immediately, no need for a popup.

<b><u> v2.05, 29.07.2016</b></u>
<font color=#FF8C00>&#9830;</font> Install: Fix Datatexts if ElvUI_SLE is enabled.
<font color=#FF8C00>&#9830;</font> Misc: Attempt to fix a weird nil error.
<font color=#FF8C00>&#9830;</font> Skins: Add quest level to the ObjectiveTracker.

<b><u> v2.04, 28.07.2016</b></u>