@@ -16,11 +16,11 @@ local classColor = E.myclass == 'PRIEST' and E.PriestColors or (CUSTOM_CLASS_COL
 local flat = [[Interface\AddOns\ElvUI_MerathilisUI\media\textures\Flat]]
 
 local ChangeLog = CreateFrame("frame")
-local ChangeLogData = [=[|cffff7d0av2.09|r, 08.08.2016
+local ChangeLogData = [=[|cffff7d0av2.10|r, xx.08.2016
 
 |cffff7d0aChanges:|r
- |cffff7d0a•|r Change the default position of the Changelog
- |cffff7d0a•|r Fix lua error in install.
+ |cffff7d0a•|r Overhaul the install process for AddOns.
+ |cffff7d0a•|r Some tweaks to the Layouts.
  
 |cffff7d0aNotes:|r
  |cffff7d0a•|r The Heal Layout is not finished yet. Will work on it in the future.
