@@ -1,3 +1,7 @@
+<b><u> v2.10, 08.08.2016</b></u>
+<font color=#FF8C00>&#9830;</font> Overhaul the install process for AddOns.
+<font color=#FF8C00>&#9830;</font> Some tweaks to the Layouts.
+
 <b><u> v2.09, 08.08.2016</b></u>
 <font color=#FF8C00>&#9830;</font> Change the default position of the Changelog.
 <font color=#FF8C00>&#9830;</font> Fix lua error in install.
